View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032274 | Open CASCADE | OCCT:Tests | public | 2021-03-31 15:51 | 2021-04-17 14:02 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.7.1 | ||||
Target Version | 7.6.0 | Fixed in Version | 7.6.0 | ||
Summary | 0032274: Tests - unstable snapshots from test case v3d/bugs/bug24785 | ||||
Description | Test case v3d/bugs/bug24785 generates unstable screenshots. | ||||
Steps To Reproduce | testgrid v3d bugs bug24785 | ||||
Tags | No tags attached. | ||||
Test case number | v3d/bugs/bug24785 | ||||
|
bug24785_debian_ref.png (11,164 bytes) |
|
bug24785_debian_test.png (10,879 bytes) |
|
The screenshot for this test has not been generated before 0032208, hence, instability of screenshot was hidden. It seems that test case never done what it is supposed to check (at least since the first OCCT release, where test was added). |
|
Branch CR32274 has been created by kgv. SHA-1: 60d0e24437df2e7361b87aaa82e5d3f10612c446 Detailed log of new commits: Author: kgv Date: Wed Apr 7 14:29:58 2021 +0300 0032274: Tests - unstable snapshots from test case v3d/bugs/bug24785 Test case has been adjusted to reproduce scenario it was supposed to check. |
|
Please raise corrected test case - OCCT: branch CR32274. |
|
Combination - OCCT branch : IR-2021-04-09 master SHA - a2af24d1a9e5a4f35749261e95d04ae2f389ccbb a87b7ddc8cb44606b91e3f37113847c3f5f50fdc Products branch : IR-2021-04-09 SHA - b5e0ee5a2dc026e18acf3da707091be5d9d6d746 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18019.250000000382 / 18057.390000000454 [-0.21%] Products Total CPU difference: 11542.82000000007 / 11506.800000000105 [+0.31%] Windows-64-VC14: OCCT Total CPU difference: 19509.84375 / 19513.828125 [-0.02%] Products Total CPU difference: 12890.46875 / 12943.234375 [-0.41%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32274 has been deleted by inv. SHA-1: 60d0e24437df2e7361b87aaa82e5d3f10612c446 |
occt: master 95bdefb2 2021-04-07 11:29:58 Committer: bugmaster Details Diff |
0032274: Tests - unstable snapshots from test case v3d/bugs/bug24785 Test case has been adjusted to reproduce scenario it was supposed to check. |
Affected Issues 0032274 |
|
mod - src/ViewerTest/ViewerTest_ViewerCommands.cxx | Diff File | ||
mod - tests/v3d/bugs/bug24785 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-03-31 15:51 | kgv | New Issue | |
2021-03-31 15:51 | kgv | Assigned To | => kgv |
2021-03-31 15:51 | kgv | File Added: bug24785_debian_ref.png | |
2021-03-31 15:51 | kgv | File Added: bug24785_debian_test.png | |
2021-03-31 15:53 | kgv | Relationship added | child of 0032208 |
2021-04-07 12:53 | kgv | Note Added: 0100167 | |
2021-04-07 13:52 | kgv | Relationship added | child of 0024785 |
2021-04-07 14:29 | git | Note Added: 0100168 | |
2021-04-07 16:23 | kgv | Note Edited: 0100167 | |
2021-04-07 16:23 | kgv | Note Added: 0100171 | |
2021-04-07 16:23 | kgv | Assigned To | kgv => bugmaster |
2021-04-07 16:23 | kgv | Status | new => resolved |
2021-04-07 16:23 | kgv | Status | resolved => reviewed |
2021-04-07 16:24 | kgv | Product Version | => 6.7.1 |
2021-04-10 13:03 | bugmaster | Note Added: 0100223 | |
2021-04-10 13:03 | bugmaster | Status | reviewed => tested |
2021-04-10 13:07 | bugmaster | Test case number | => v3d/bugs/bug24785 |
2021-04-10 13:16 | bugmaster | Changeset attached | => occt master 95bdefb2 |
2021-04-10 13:16 | bugmaster | Status | tested => verified |
2021-04-10 13:16 | bugmaster | Resolution | open => fixed |
2021-04-17 14:02 | git | Note Added: 0100414 |