0032274: Tests - unstable snapshots from test case v3d/bugs/bug24785

Test case has been adjusted to reproduce scenario it was supposed to check.